--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:Roboto Slab;
+    font-family:generic-name;
     font-weight: 100;
     max-width: 100%;
     transition: all 0.7s ease;
